2.1.7 (30.09.2018):

* Report PerlMagick errors to user.
* Add note about checking policy.xml in case of ImageMagick Exception 445.


2.1.6 (20.09.2018):

* Fixed starting processes from tools menu.
  Closes bug #308 (Exit on Starting OCR)
* Fixed opening UDT and unpaper dialog windows.


2.1.5 (16.09.2018):

* Pass page data to thread just in time to process it, rather than when the
  process is defined. Previously, if the application was still busy, say with
  tesseract whilst the user tried to save, then the resulting document would be
  missing the pages updated by tesseract. Closes bug #247
  (Error creating PDF image object: Can't call method "val" on an undefined value)
* Update to Hungarian translation (thanks to csola)
* Update to Czech translation (thanks to Pavel Borecki)
* Update to German translation (thanks to Tobias Bannert)


2.1.4 (29.07.2018):

* Fix email functionality broken in v2.1.3. Closes Launchpad bug #1784168:
  (gscan2pdf 2.1.3 not sends E-Mail (regression))


2.1.3 (28.07.2018):

* Only run test if session file can be deserialised. Closes bug #293 (again)
  (t/175_open_session2.t fails on i686: Long integer size is not compatible)
* Optionally also include timezone and time information in metadata of PDF or
  DjVU. Closes feature request #102 (always sets the time to 0 UTC)
* Don't unnecessarily use tiffcp on single-page TIFFs
* Update to German translation (thanks to Tobias Bannert)


2.1.2 (23.05.2018):

* Fix bug causing config JSON file to be saved with numeric locale, and
  therefore potentially corrupt.


2.1.1 (14.05.2018):

* Fix saving profile bug caused by deprecated Gtk2 API
* + support for dragging files from file managers (again)
* Update to Spanish translation (thanks to Rodrigo)
* Update to Swedish translation (thanks to Anders Jonsson)


2.1.0 (20.04.2018):

* Support import of password-protected PDFs. Closes Debian bug #894764
  (Please prompt for password on import of encrypted file)