@@ -114,54 +114,54 @@ is_deeply( \@date, [ 2016, 2, 1, 10, 11, 12 ], 'text_to_datetime' );
 
 is(
     Gscan2pdf::Document::expand_metadata_pattern(
-        template      => '%Da %Dt %DY %Y %Dm %m %Dd %d %H %M %S',
+        template      => '%Da %Dt %DY %Y %Dm %m %Dd %d %H %M %S.%De',
         author        => 'a.n.other',
         title         => 'title',
         docdate       => [ 2016, 02, 01 ],
         today_and_now => [ 1970, 01, 12, 14, 46, 39 ],
+        extension     => 'png',
     ),
-    'a.n.other title 2016 1970 02 01 01 12 14 46 39',
+    'a.n.other title 2016 1970 02 01 01 12 14 46 39.png',
     'expand_metadata_pattern'
 );
 
 is(
     Gscan2pdf::Document::expand_metadata_pattern(
-        template      => '%Da %Dt %DY %Y %Dm %m %Dd %d %H %M %S %DH %DM %DS',
-        author        => 'a.n.other',
-        title         => 'title',
-        docdate       => [ 2016, 02, 01, 10, 11, 12 ],
+        template => '%Da %Dt %DY %Y %Dm %m %Dd %d %H %M %S %DH %DM %DS.%De',
+        author   => 'a.n.other',
+        title    => 'title',
+        docdate  => [ 2016, 02, 01, 10, 11, 12 ],
         today_and_now => [ 1970, 01, 12, 14, 46, 39 ],
+        extension     => 'tif',
     ),
-    'a.n.other title 2016 1970 02 01 01 12 14 46 39 10 11 12',
+    'a.n.other title 2016 1970 02 01 01 12 14 46 39 10 11 12.tif',
     'expand_metadata_pattern with doc time'
 );
 
-#########################
-
 is(
     Gscan2pdf::Document::expand_metadata_pattern(
-        template      => '%Da %Dt %DY %Y %Dm %m %Dd %d %H %M %S',
+        template      => '%Da %Dt %DY %Y %Dm %m %Dd %d %H %M %S.%De',
         author        => 'a.n.other',
         title         => 'title',
         docdate       => [ 1816, 02, 01 ],
         today_and_now => [ 1970, 01, 12, 14, 46, 39 ],
+        extension     => 'djvu',
     ),
-    'a.n.other title 1816 1970 02 01 01 12 14 46 39',
+    'a.n.other title 1816 1970 02 01 01 12 14 46 39.djvu',
     'expand_metadata_pattern before 1900'
 );
 
-#########################
-
 is(
     Gscan2pdf::Document::expand_metadata_pattern(
-        template           => '%Da %Dt %DY %Y %Dm %m %Dd %d %H %M %S',
+        template           => '%Da %Dt %DY %Y %Dm %m %Dd %d %H %M %S.%De',
         convert_whitespace => TRUE,
         author             => 'a.n.other',
         title              => 'title',
         docdate            => [ 2016, 02, 01 ],
         today_and_now      => [ 1970, 01, 12, 14, 46, 39 ],
+        extension          => 'pdf',
     ),
-    'a.n.other_title_2016_1970_02_01_01_12_14_46_39',
+    'a.n.other_title_2016_1970_02_01_01_12_14_46_39.pdf',
     'expand_metadata_pattern with underscores'
 );
 
